Adjusted configuration files

--- a/notebooks/CorrectionPipeline.ipynb
+++ b/notebooks/CorrectionPipeline.ipynb
@@ -78,14 +78,14 @@
     "numMagBins = strConfig.numMagBins\n",
     "numBins = strConfig.numBins\n",
     "classCutoff = strConfig.classCutoff\n",
-    "goldCols = strConfig.goldCols\n",
+    "goldCols = Config.goldCols\n",
     "gCut = strConfig.gCut\n",
     "magBins = strConfig.magBins\n",
     "cutOffPercent = strConfig.cutOffPercent\n",
     "binNum = strConfig.binNum\n",
     "matchDist = strConfig.matchDist\n",
     "\n",
-    "deepCols = strConfig.deepCols"
+    "deepCols = Config.deepCols"
    ]
   },
   {
@@ -124,10 +124,10 @@
    "source": [
     "stellarDir = strConfig.stellarDir\n",
     "\n",
-    "matBalrGalaFile = strConfig.matBalrGalaFile\n",
-    "detBalrGalaFile = strConfig.detBalrGalaFile\n",
-    "matBalrStarFile = strConfig.matBalrStarFile\n",
-    "detBalrStarFile = strConfig.detBalrStarFile\n",
+    "matBalrGalaFile = Config.matBalrGalaFile\n",
+    "detBalrGalaFile = Config.detBalrGalaFile\n",
+    "matBalrStarFile = Config.matBalrStarFile\n",
+    "detBalrStarFile = Config.detBalrStarFile\n",
     "\n",
     "matGalaFile = strConfig.matGalaFile\n",
     "detGalaAllPosFile = strConfig.detGalaAllPosFile\n",
@@ -135,10 +135,10 @@
     "matStarFile = strConfig.matStarFile\n",
     "detStarAllPosFile = strConfig.detStarAllPosFile\n",
     "\n",
-    "deepFiles = strConfig.deepFiles\n",
+    "deepFiles = Config.deepFiles\n",
     "\n",
-    "origCondFiles = strConfig.origCondFiles\n",
-    "stelFile = strConfig.stelFile\n",
+    "origCondFiles = Config.origCondFiles\n",
+    "stelFile = Config.stelFile\n",
     "pixFile = strConfig.pixFile\n",
     "condFiles = strConfig.condFiles\n",
     "\n",
@@ -177,8 +177,8 @@
     "goldStarFiles = strConfig.goldStarFiles\n",
     "goldGalaFiles = strConfig.goldGalaFiles\n",
     "\n",
-    "goldObjectsDir = strConfig.goldObjectsDir\n",
-    "goldObjectsFiles = strConfig.goldObjectsFiles\n",
+    "goldObjectsDir = Config.goldObjectsDir\n",
+    "goldObjectsFiles = Config.goldObjectsFiles\n",
     "\n",
     "goldMoreInfoStarFiles = strConfig.goldMoreInfoStarFiles\n",
     "goldMoreInfoGalaFiles = strConfig.goldMoreInfoGalaFiles\n",
@@ -199,9 +199,6 @@
    "execution_count": 10,
    "id": "ace1d8b5-f5aa-4231-bf7f-8c346df34e67",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
@@ -234,9 +231,6 @@
    "execution_count": 12,
    "id": "c87b5c5d-61d1-4375-8769-d829632f82fe",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
@@ -271,9 +265,6 @@
    "execution_count": 13,
    "id": "3267ee3d-1041-40f9-9a37-b7c527c8bf4a",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
@@ -313,9 +304,6 @@
    "execution_count": 14,
    "id": "e0ddd1c3-12d3-4ad1-b7a7-1e67dd974666",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
@@ -359,9 +347,6 @@
    "execution_count": 15,
    "id": "ff27d508-3f16-424a-b589-a0f3e1a22705",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
@@ -396,9 +381,6 @@
    "execution_count": 16,
    "id": "d457c50b-a5f2-4a8c-ad57-921e7039170d",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
@@ -433,9 +415,6 @@
    "execution_count": 17,
    "id": "e5b5101c-2989-498b-8383-628c95e29ee9",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
@@ -470,9 +449,6 @@
    "execution_count": 18,
    "id": "6bf6bf31-1419-4743-bcd0-c30183d2b53d",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
@@ -517,9 +493,6 @@
    "execution_count": 19,
    "id": "5bca0b14-b553-4207-9b4e-9bec446be67b",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
@@ -554,9 +527,6 @@
    "execution_count": 20,
    "id": "9b349c2c-2ece-4250-8014-8d9dd2191870",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
@@ -1034,9 +1004,6 @@
    "execution_count": 32,
    "id": "45aef1e5-afa6-4864-8aca-ed6210dec0d1",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
@@ -1053,9 +1020,6 @@
    "execution_count": 33,
    "id": "a6e41a87-f322-4a37-aefc-c5a97b0ca3f2",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
@@ -1068,9 +1032,6 @@
    "execution_count": 34,
    "id": "2f1535b8-9892-4943-bbfe-2dc228fb93bf",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
@@ -1086,9 +1047,6 @@
    "execution_count": 35,
    "id": "e724d3e2-943d-4b38-a8c8-eb4c446180c6",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
@@ -1101,9 +1059,6 @@
    "execution_count": 36,
    "id": "c9d9ff78-f051-4b5c-917e-fc01072ae2cc",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
@@ -1163,9 +1118,6 @@
    "execution_count": 38,
    "id": "5d493c98-dbd5-4efc-808f-2bf1b01d7e0f",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
@@ -1470,9 +1422,6 @@
    "execution_count": 51,
    "id": "95b4e760-b236-4cba-b1dc-f18abd3f5e76",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
@@ -1502,9 +1451,6 @@
    "execution_count": 52,
    "id": "7f71827d-9b5b-4706-8aec-360b3b144b0f",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
@@ -1520,9 +1466,6 @@
    "execution_count": 53,
    "id": "4e8c23af-0970-48e0-8837-2c2bb166b86b",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
@@ -1547,9 +1490,6 @@
    "execution_count": 54,
    "id": "f061161a-284a-406c-86bd-228d6e66e856",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
@@ -1562,9 +1502,6 @@
    "execution_count": 55,
    "id": "e812032b-5df2-4dd0-b8cb-25fa137f76f1",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
@@ -1582,9 +1519,6 @@
    "execution_count": 56,
    "id": "d16467d7-a151-432f-8a8a-2a0d337a2a9e",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
@@ -1619,9 +1553,6 @@
    "execution_count": null,
    "id": "0df92fe8-6c2a-4403-bead-ac79586b3728",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
@@ -1650,9 +1581,6 @@
    "execution_count": 57,
    "id": "6ea3516d-190b-49ad-9c0b-e153f3e20eaf",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
@@ -1666,9 +1594,6 @@
    "execution_count": 58,
    "id": "0390b46e-7083-467b-b8c6-71be00eb3132",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
@@ -1681,9 +1606,6 @@
    "execution_count": 59,
    "id": "77e1dbe2-156f-4e44-9409-ef1d4b943212",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
@@ -1696,9 +1618,6 @@
    "execution_count": 60,
    "id": "434a1dd6-c351-4e86-b883-2c203f16839c",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
@@ -1712,9 +1631,6 @@
    "execution_count": 61,
    "id": "efa58cff-1b3c-47af-a6f8-bd3e2a4bb3e0",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
@@ -2115,9 +2031,6 @@
    "execution_count": 78,
    "id": "7f1080b9-b2bb-4f9f-8757-e333b8061af7",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
@@ -2130,9 +2043,6 @@
    "execution_count": 79,
    "id": "8b62ce02-0e2a-40d3-8c20-c259968d519d",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
@@ -2145,9 +2055,6 @@
    "execution_count": 80,
    "id": "540d3588-964f-4a73-8bc6-abd52a652984",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
@@ -2175,9 +2082,6 @@
    "execution_count": 81,
    "id": "6156b71f-864c-4566-8919-a2efb98f7c40",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
@@ -2191,9 +2095,6 @@
    "execution_count": 82,
    "id": "c33d3e6f-ec9b-416b-ab33-8410518440d4",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
@@ -2206,9 +2107,6 @@
    "execution_count": 83,
    "id": "d41997b2-1857-4e72-aae0-94ea7076162d",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
@@ -2221,9 +2119,6 @@
    "execution_count": 84,
    "id": "ad2cb359-35f4-4cf7-b50a-b6c4f0b0067a",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
@@ -2240,9 +2135,6 @@
    "execution_count": 85,
    "id": "749affaf-35ea-4380-8c41-b423d3643990",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
@@ -2274,9 +2166,6 @@
    "execution_count": 86,
    "id": "26928650-89c8-4653-9476-0a2e076a4716",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
@@ -2290,15 +2179,12 @@
    "execution_count": 87,
    "id": "c5467b11-5b85-43b5-8f27-8129018b92f0",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
    "source": [
-    "# strPixFile = stellarDir + 'Phoenix_Pix.fits'\n",
-    "# backPixFile = stellarDir + 'Background_Pix.fits'"
+    "# strPixFile = strConfig.phoenixFile\n",
+    "# backPixFile = strConfig.backgroundFile"
    ]
   },
   {
@@ -2306,9 +2192,6 @@
    "execution_count": 88,
    "id": "9031a10d-5feb-4da2-8c70-dbdff679b9e3",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
@@ -2322,9 +2205,6 @@
    "execution_count": 89,
    "id": "77cba339-5b3b-49f1-80c6-46cde1f7927d",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
@@ -2337,9 +2217,6 @@
    "execution_count": 90,
    "id": "c0da058d-ef82-4fbd-91c9-eef8d9e59631",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
@@ -2352,9 +2229,6 @@
    "execution_count": 91,
    "id": "43185c63-b0d7-417a-8336-e8f8af92c8e8",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
@@ -2373,9 +2247,6 @@
    "execution_count": 92,
    "id": "d9677071-8ee8-4709-aa75-5a4f507c126f",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
@@ -2401,9 +2272,6 @@
    "execution_count": 93,
    "id": "3231ecb7-845b-4994-a927-8c5c4e732a47",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
@@ -2419,9 +2287,6 @@
    "execution_count": 94,
    "id": "4a69243e-81d7-4795-aa02-a2b849fd3ddd",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
