--- a/notebooks/tests_&_plots/Display_Properties.ipynb
+++ b/notebooks/tests_&_plots/Display_Properties.ipynb
@@ -31,9 +31,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "origCondFiles = strConfig.origCondFiles\n",
-    "stelFile = strConfig.stelFile\n",
-    "conditions = strConfig.conditions\n",
+    "origCondFiles = Config.origCondFiles\n",
+    "stelFile = Config.stelFile\n",
+    "conditions = Config.conditions\n",
     "\n",
     "nside_coverage = 32"
    ]
