--- a/notebooks/tests_&_plots/JupyterVaried.ipynb
+++ b/notebooks/tests_&_plots/JupyterVaried.ipynb
@@ -61,23 +61,23 @@
     "numMagBins = strConfig.numMagBins\n",
     "numBins = strConfig.numBins\n",
     "classCutoff = strConfig.classCutoff\n",
-    "goldCols = strConfig.goldCols\n",
+    "goldCols = Config.goldCols\n",
     "gCut = strConfig.gCut\n",
     "magBins = strConfig.magBins\n",
     "cutOffPercent = strConfig.cutOffPercent\n",
     "binNum = strConfig.binNum\n",
     "\n",
-    "deepCols = strConfig.deepCols\n",
+    "deepCols = Config.deepCols\n",
     "\n",
     "path = strConfig.path\n",
     "mu = strConfig.mu\n",
     "\n",
-    "matBalrGalaFile = strConfig.matBalrGalaFile\n",
-    "detBalrGalaFile = strConfig.detBalrGalaFile\n",
-    "matBalrStarFile = strConfig.matBalrStarFile\n",
-    "detBalrStarFile = strConfig.detBalrStarFile\n",
+    "matBalrGalaFile = Config.matBalrGalaFile\n",
+    "detBalrGalaFile = Config.detBalrGalaFile\n",
+    "matBalrStarFile = Config.matBalrStarFile\n",
+    "detBalrStarFile = Config.detBalrStarFile\n",
     "\n",
-    "deepFiles = strConfig.deepFiles\n",
+    "deepFiles = Config.deepFiles\n",
     "pixFile = strConfig.pixFile\n",
     "condFiles = strConfig.condFiles\n",
     "\n",
