--- a/notebooks/tests_&_plots/PhoenixPix.ipynb
+++ b/notebooks/tests_&_plots/PhoenixPix.ipynb
@@ -247,8 +247,7 @@
    "outputs": [],
    "source": [
     "import astropy.io.fits as fits\n",
-    "from astropy.table import Table\n",
-    "stellarDir = strConfig.stellarDir"
+    "from astropy.table import Table"
    ]
   },
   {
@@ -258,8 +257,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "strPixFile = stellarDir + 'Phoenix_Pix.fits'\n",
-    "backPixFile = stellarDir + 'Background_Pix.fits'\n",
+    "strPixFile = strConfig.phoenixFile\n",
+    "backPixFile = strConfig.backgroundFile\n",
     "\n",
     "str_table = Table()\n",
     "str_table['PIX'] = strPix\n",
