--- a/notebooks/tests_&_plots/ProbPlots.ipynb
+++ b/notebooks/tests_&_plots/ProbPlots.ipynb
@@ -76,8 +76,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "matBalrStarFile = strConfig.matBalrStarFile\n",
-    "detBalrStarFile = strConfig.detBalrStarFile\n",
+    "matBalrStarFile = Config.matBalrStarFile\n",
+    "detBalrStarFile = Config.detBalrStarFile\n",
     "\n",
     "pixFile = strConfig.pixFile\n",
     "condFiles = strConfig.condFiles"
