Added new parameters

--- a/notebooks/CorrectionPipeline.ipynb
+++ b/notebooks/CorrectionPipeline.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "4c2dadf8-6a8b-4043-84ce-1c4a52311cae",
    "metadata": {},
    "outputs": [],
@@ -58,23 +58,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "3755ebb4-06e1-43de-bd80-e9bbd9ba8df8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "detIndLim = 300\n",
-    "claIndLim = 150"
+    "detIndLim = strConfig.detIndLim\n",
+    "claIndLim = strConfig.claIndLim"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "efcc41d5-1bad-4442-90ff-c2ed84e6560b",
    "metadata": {},
    "outputs": [],
    "source": [
     "res = strConfig.res\n",
+    "perCovered = strConfig.perCovered\n",
+    "nsideCourse = strConfig.nsideCourse\n",
+    "fracPer = strConfig.fracPer\n",
     "numMagBins = strConfig.numMagBins\n",
     "numBins = strConfig.numBins\n",
     "classCutoff = strConfig.classCutoff\n",
@@ -98,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "f2a6a0b0-2fe5-4377-aa34-aa13437f5558",
    "metadata": {},
    "outputs": [],
@@ -117,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "8684c61e-c3e1-4193-b8e3-7a34da19ced5",
    "metadata": {},
    "outputs": [],
@@ -154,9 +157,9 @@
     "galaDetAsGalaTrainFiles = strConfig.galaDetAsGalaTrainFiles\n",
     "galaDetAsGalaProbFiles = strConfig.galaDetAsGalaProbFiles\n",
     "\n",
-    "galaDetAsAnyExtrFiles = strConfig.galaDetAsAnyExtrFiles\n",
-    "galaDetAsAnyTrainFiles = strConfig.galaDetAsAnyTrainFiles\n",
-    "galaDetAsAnyProbFiles = strConfig.galaDetAsAnyProbFiles\n",
+    "# galaDetAsAnyExtrFiles = strConfig.galaDetAsAnyExtrFiles\n",
+    "# galaDetAsAnyTrainFiles = strConfig.galaDetAsAnyTrainFiles\n",
+    "# galaDetAsAnyProbFiles = strConfig.galaDetAsAnyProbFiles\n",
     "\n",
     "starExtrFiles = strConfig.starExtrFiles\n",
     "starTrainFiles = strConfig.starTrainFiles\n",
@@ -170,9 +173,9 @@
     "starDetAsGalaTrainFiles = strConfig.starDetAsGalaTrainFiles\n",
     "starDetAsGalaProbFiles = strConfig.starDetAsGalaProbFiles\n",
     "\n",
-    "starDetAsAnyExtrFiles = strConfig.starDetAsAnyExtrFiles\n",
-    "starDetAsAnyTrainFiles = strConfig.starDetAsAnyTrainFiles\n",
-    "starDetAsAnyProbFiles = strConfig.starDetAsAnyProbFiles\n",
+    "# starDetAsAnyExtrFiles = strConfig.starDetAsAnyExtrFiles\n",
+    "# starDetAsAnyTrainFiles = strConfig.starDetAsAnyTrainFiles\n",
+    "# starDetAsAnyProbFiles = strConfig.starDetAsAnyProbFiles\n",
     "\n",
     "goldStarFiles = strConfig.goldStarFiles\n",
     "goldGalaFiles = strConfig.goldGalaFiles\n",
@@ -196,26 +199,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "ace1d8b5-f5aa-4231-bf7f-8c346df34e67",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "# validPixCropData(origCondFiles, stelFile, pixFile, condFiles)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "ca46a3cb-0ada-4867-a50c-1064ea2648bd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "validPix = fitsio.read(pixFile)['PIXEL']\n",
-    "pixCheck = np.full(12*(res**2), False, dtype = bool)\n",
-    "pixCheck[validPix] = True"
+    "# validPixCropData(origCondFiles, stelFile, pixFile, condFiles, res, perCovered)"
    ]
   },
   {
@@ -996,7 +987,7 @@
    "source": [
     "## Notes on Next Blocks\n",
     "\n",
-    "These next section of blocks of code can be used somewhat to analyze the validity of assuming that the structure of the probability maps in general is not finer than a 512 pixel resolution. "
+    "These next section of blocks of code can be used somewhat to analyze the validity of assuming that the structure of the probability maps in general is not finer than a nsideCourse pixel resolution. "
    ]
   },
   {
@@ -1010,7 +1001,7 @@
    "source": [
     "# origProbMap = np.full(12*(res**2), hp.UNSEEN)\n",
     "# origProbMap[validPix] = starDetAsGalaProb[0]\n",
-    "# degProbMap = hp.ud_grade(origProbMap, 512, order_in = 'NESTED', order_out = 'NESTED')\n",
+    "# degProbMap = hp.ud_grade(origProbMap, nsideCourse, order_in = 'NESTED', order_out = 'NESTED')\n",
     "# nside_coverage = 32\n",
     "# hspProb = hsp.HealSparseMap(nside_coverage=nside_coverage, healpix_map=degProbMap)"
    ]
@@ -1081,7 +1072,7 @@
    "source": [
     "## Fraction Covered\n",
     "\n",
-    "This looks at fracDet data. Degradation is done to a resolution of 512."
+    "This looks at fracDet data. Degradation is done to a resolution of nsideCourse."
    ]
   },
   {
@@ -1095,14 +1086,16 @@
     "fracFile = '/hdfs/bechtol/balrog/y3/y3a2_survey_conditions_maps/fracdet/y3a2_griz_o.4096_t.32768_coverfoot_EQU.fits.gz'\n",
     "fracData = fitsio.read(fracFile)\n",
     "\n",
-    "# This degrades it to 512 resolution and applies a cut to where there is at least 75% coverage.\n",
+    "# This degrades it to nsideCourse resolution and applies a cut to where there is at least 75% coverage.\n",
     "fracPix = fracData['PIXEL']\n",
     "fracDet = fracData['SIGNAL']\n",
     "origFracMap = np.full(12*(4096**2), 0.0)\n",
     "origFracMap[fracPix] = fracDet\n",
+    "if res != 4096:\n",
+    "    origFracMap = hp.ud_grade(origFracMap, res, order_in = 'NESTED', order_out = 'NESTED')\n",
     "origFracMap[~pixCheck] = 0.0 # If we aren't looking at the pixel, effective cover of 0%\n",
-    "fracMap = hp.ud_grade(origFracMap, 512, order_in = 'NESTED', order_out = 'NESTED')\n",
-    "fracPix = np.where(fracMap >= 0.5)[0]"
+    "fracMap = hp.ud_grade(origFracMap, nsideCourse, order_in = 'NESTED', order_out = 'NESTED')\n",
+    "fracPix = np.where(fracMap >= fracPer)[0]"
    ]
   },
   {
@@ -1122,7 +1115,7 @@
    },
    "outputs": [],
    "source": [
-    "# fracTest = np.full(12*(512**2), hp.UNSEEN)\n",
+    "# fracTest = np.full(12*(nsideCourse**2), hp.UNSEEN)\n",
     "# fracTest[fracPix] = fracMap[fracPix]\n",
     "\n",
     "# nside_coverage = 32\n",
@@ -1146,7 +1139,7 @@
    "source": [
     "## Converting to fracPix from validPix\n",
     "\n",
-    "At this stage, when degrading it will be simpler to remain in 512 resolution. The new \"validPix\" type object in this resolution has been named \"fracPix\". Degradation will be done. Classified stars and galaxies should immediately be corrected for with the fracDet map to save some time, which is always nice. Probabilities will also be degraded. For these, DO NOT USE THE FRACDET MAP. Instead, degrade with all other pixels as hp.UNSEEN.\n",
+    "At this stage, when degrading it will be simpler to remain in nsideCourse resolution. The new \"validPix\" type object in this resolution has been named \"fracPix\". Degradation will be done. Classified stars and galaxies should immediately be corrected for with the fracDet map to save some time, which is always nice. Probabilities will also be degraded. For these, DO NOT USE THE FRACDET MAP. Instead, degrade with all other pixels as hp.UNSEEN.\n",
     "\n",
     "As a note, this could potentially introduce issues. For a simple example of why, suppose that the superpixel is composed of only 2 subpixels. One of them originally had 50% coverage, the other originally had 100% coverage. If both were valid pixels but with vastly different probabilities, simply taking the average could be problematic. A weighted average would in this case be more appropriate, but either solution likely has issues.\n",
     "\n",
@@ -1166,9 +1159,9 @@
     "    \n",
     "    fullClaStar = np.zeros(12*(res**2))\n",
     "    fullClaStar[validPix] = claStar[i]\n",
-    "    deClaStarInd = hp.ud_grade(fullClaStar, 512, order_in = 'NESTED', order_out = 'NESTED')\n",
+    "    deClaStarInd = hp.ud_grade(fullClaStar, nsideCourse, order_in = 'NESTED', order_out = 'NESTED')\n",
     "    \n",
-    "    deClaStar.append((deClaStarInd[fracPix] / fracMap[fracPix]) * ((res / 512)**2))\n",
+    "    deClaStar.append((deClaStarInd[fracPix] / fracMap[fracPix]) * ((res / nsideCourse)**2))\n",
     "    \n",
     "deClaStar = np.array(deClaStar, dtype = object)"
    ]
@@ -1186,9 +1179,9 @@
     "    \n",
     "    fullClaGala = np.zeros(12*(res**2))\n",
     "    fullClaGala[validPix] = claGala[i]\n",
-    "    deClaGalaInd = hp.ud_grade(fullClaGala, 512, order_in = 'NESTED', order_out = 'NESTED')\n",
+    "    deClaGalaInd = hp.ud_grade(fullClaGala, nsideCourse, order_in = 'NESTED', order_out = 'NESTED')\n",
     "    \n",
-    "    deClaGala.append((deClaGalaInd[fracPix] / fracMap[fracPix]) * ((res / 512)**2))\n",
+    "    deClaGala.append((deClaGalaInd[fracPix] / fracMap[fracPix]) * ((res / nsideCourse)**2))\n",
     "    \n",
     "deClaGala = np.array(deClaGala, dtype = object)"
    ]
@@ -1206,7 +1199,7 @@
     "    fullProb = np.zeros(12*(res**2))\n",
     "    fullProb[validPix] = starDetAsStarProb[i] * origFracMap[validPix]\n",
     "    \n",
-    "    deFullProb = hp.ud_grade(fullProb, 512, order_in = 'NESTED', order_out = 'NESTED')\n",
+    "    deFullProb = hp.ud_grade(fullProb, nsideCourse, order_in = 'NESTED', order_out = 'NESTED')\n",
     "    deStarDetAsStarProb.append(deFullProb[fracPix] / fracMap[fracPix])\n",
     "    \n",
     "deStarDetAsStarProb = np.array(deStarDetAsStarProb, dtype = object)"
@@ -1225,7 +1218,7 @@
     "    fullProb = np.zeros(12*(res**2))\n",
     "    fullProb[validPix] = starDetAsGalaProb[i] * origFracMap[validPix]\n",
     "    \n",
-    "    deFullProb = hp.ud_grade(fullProb, 512, order_in = 'NESTED', order_out = 'NESTED')\n",
+    "    deFullProb = hp.ud_grade(fullProb, nsideCourse, order_in = 'NESTED', order_out = 'NESTED')\n",
     "    deStarDetAsGalaProb.append(deFullProb[fracPix] / fracMap[fracPix])\n",
     "    \n",
     "deStarDetAsGalaProb = np.array(deStarDetAsGalaProb, dtype = object)"
@@ -1244,7 +1237,7 @@
     "    fullProb = np.zeros(12*(res**2))\n",
     "    fullProb[validPix] = starCorrProb[i] * origFracMap[validPix]\n",
     "    \n",
-    "    deFullProb = hp.ud_grade(fullProb, 512, order_in = 'NESTED', order_out = 'NESTED')\n",
+    "    deFullProb = hp.ud_grade(fullProb, nsideCourse, order_in = 'NESTED', order_out = 'NESTED')\n",
     "    deStarCorrProb.append(deFullProb[fracPix] / fracMap[fracPix])\n",
     "    \n",
     "deStarCorrProb = np.array(deStarCorrProb, dtype = object)"
@@ -1263,7 +1256,7 @@
     "    fullProb = np.zeros(12*(res**2))\n",
     "    fullProb[validPix] = galaDetAsStarProb[i] * origFracMap[validPix]\n",
     "    \n",
-    "    deFullProb = hp.ud_grade(fullProb, 512, order_in = 'NESTED', order_out = 'NESTED')\n",
+    "    deFullProb = hp.ud_grade(fullProb, nsideCourse, order_in = 'NESTED', order_out = 'NESTED')\n",
     "    deGalaDetAsStarProb.append(deFullProb[fracPix] / fracMap[fracPix])\n",
     "    \n",
     "deGalaDetAsStarProb = np.array(deGalaDetAsStarProb, dtype = object)"
@@ -1282,7 +1275,7 @@
     "    fullProb = np.zeros(12*(res**2))\n",
     "    fullProb[validPix] = galaDetAsGalaProb[i] * origFracMap[validPix]\n",
     "    \n",
-    "    deFullProb = hp.ud_grade(fullProb, 512, order_in = 'NESTED', order_out = 'NESTED')\n",
+    "    deFullProb = hp.ud_grade(fullProb, nsideCourse, order_in = 'NESTED', order_out = 'NESTED')\n",
     "    deGalaDetAsGalaProb.append(deFullProb[fracPix] / fracMap[fracPix])\n",
     "    \n",
     "deGalaDetAsGalaProb = np.array(deGalaDetAsGalaProb, dtype = object)"
@@ -1301,7 +1294,7 @@
     "    fullProb = np.zeros(12*(res**2))\n",
     "    fullProb[validPix] = galaCorrProb[i] * origFracMap[validPix]\n",
     "    \n",
-    "    deFullProb = hp.ud_grade(fullProb, 512, order_in = 'NESTED', order_out = 'NESTED')\n",
+    "    deFullProb = hp.ud_grade(fullProb, nsideCourse, order_in = 'NESTED', order_out = 'NESTED')\n",
     "    deGalaCorrProb.append(deFullProb[fracPix] / fracMap[fracPix])\n",
     "    \n",
     "deGalaCorrProb = np.array(deGalaCorrProb, dtype = object)"
@@ -1316,12 +1309,12 @@
    "source": [
     "fullProb = np.zeros(12*(res**2))\n",
     "fullProb[validPix] = starDetAsAnyProb * origFracMap[validPix]\n",
-    "deFullProb = hp.ud_grade(fullProb, 512, order_in = 'NESTED', order_out = 'NESTED')\n",
+    "deFullProb = hp.ud_grade(fullProb, nsideCourse, order_in = 'NESTED', order_out = 'NESTED')\n",
     "deStarDetAsAnyProb = deFullProb[fracPix] / fracMap[fracPix]\n",
     "\n",
     "fullProb = np.zeros(12*(res**2))\n",
     "fullProb[validPix] = galaDetAsAnyProb * origFracMap[validPix]\n",
-    "deFullProb = hp.ud_grade(fullProb, 512, order_in = 'NESTED', order_out = 'NESTED')\n",
+    "deFullProb = hp.ud_grade(fullProb, nsideCourse, order_in = 'NESTED', order_out = 'NESTED')\n",
     "deGalaDetAsAnyProb = deFullProb[fracPix] / fracMap[fracPix]"
    ]
   },
@@ -1585,7 +1578,7 @@
    },
    "outputs": [],
    "source": [
-    "# fracRa, fracDec = hp.pixelfunc.pix2ang(512, fracPix, nest=True, lonlat=True)\n",
+    "# fracRa, fracDec = hp.pixelfunc.pix2ang(nsideCourse, fracPix, nest=True, lonlat=True)\n",
     "# fracVec = hp.pixelfunc.ang2vec(fracRa, fracDec, lonlat = True)"
    ]
   },
@@ -1658,8 +1651,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "phoRa, phoDec = hp.pixelfunc.pix2ang(512, np.arange(12*(512**2)), nest=True, lonlat=True)\n",
-    "phoPix = np.full(12*(512**2), False, dtype = bool)\n",
+    "phoRa, phoDec = hp.pixelfunc.pix2ang(nsideCourse, np.arange(12*(nsideCourse**2)), nest=True, lonlat=True)\n",
+    "phoPix = np.full(12*(nsideCourse**2), False, dtype = bool)\n",
     "phoPix[np.where((phoRa >= 15) & (phoRa <= 35) & (phoDec >= -60) & (phoDec <= -40))[0]] = True"
    ]
   },
@@ -1672,12 +1665,12 @@
    "source": [
     "smoothSigma = .15 * np.pi / 180\n",
     "\n",
-    "fullOrigStar = np.full(12*(512**2), hp.UNSEEN)\n",
+    "fullOrigStar = np.full(12*(nsideCourse**2), hp.UNSEEN)\n",
     "fullOrigStar[fracPix] = origStar\n",
     "fullOrigStar[np.where(fullOrigStar <= 0)[0]] = hp.UNSEEN\n",
     "\n",
     "# fullOrigStar[~phoPix] = hp.UNSEEN\n",
-    "# smoothingWeights = np.zeros(12*(512**2))\n",
+    "# smoothingWeights = np.zeros(12*(nsideCourse**2))\n",
     "# smoothingWeights[np.where(fullOrigStar > 0)[0]] = 1\n",
     "# smoothingWeights = hp.pixelfunc.reorder(hp.sphtfunc.smoothing(hp.pixelfunc.reorder(smoothingWeights, n2r = True), sigma = smoothSigma), r2n = True)\n",
     "# fullOrigStar = hp.pixelfunc.reorder(hp.sphtfunc.smoothing(hp.pixelfunc.reorder(fullOrigStar, n2r = True), sigma = smoothSigma), r2n = True)\n",
@@ -1686,14 +1679,14 @@
     "# fullOrigStar[fracPix[angleCrop]] = hp.UNSEEN\n",
     "# fullOrigStar[fracPix[extraCrop]] = hp.UNSEEN\n",
     "\n",
-    "fullCorrStar = np.full(12*(512**2), hp.UNSEEN)\n",
+    "fullCorrStar = np.full(12*(nsideCourse**2), hp.UNSEEN)\n",
     "fullCorrStar[fracPix] = corrStar\n",
     "fullCorrStar[np.where(fullOrigStar <= 0)[0]] = hp.UNSEEN\n",
     "\n",
     "# fullCorrStar = hp.pixelfunc.reorder(hp.sphtfunc.smoothing(hp.pixelfunc.reorder(fullCorrStar, n2r = True), sigma = smoothSigma), r2n = True)\n",
     "# fullCorrStar[np.where(fullOrigStar > 0)[0]] = fullCorrStar[np.where(fullOrigStar > 0)[0]] / smoothingWeights[np.where(fullOrigStar > 0)[0]]\n",
     "\n",
-    "starRatio = np.full(12*(512**2), hp.UNSEEN)\n",
+    "starRatio = np.full(12*(nsideCourse**2), hp.UNSEEN)\n",
     "starRatio[np.where(fullOrigStar > 0)[0]] = fullCorrStar[np.where(fullOrigStar > 0)[0]] / fullOrigStar[np.where(fullOrigStar > 0)[0]]"
    ]
   },
@@ -1718,11 +1711,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fullOrigGala = np.full(12*(512**2), hp.UNSEEN)\n",
+    "fullOrigGala = np.full(12*(nsideCourse**2), hp.UNSEEN)\n",
     "fullOrigGala[fracPix] = origGala\n",
     "fullOrigGala[np.where(fullOrigGala <= 0)[0]] = hp.UNSEEN\n",
     "# Comment out below potentially to not smooth\n",
-    "smoothingWeights = np.zeros(12*(512**2))\n",
+    "smoothingWeights = np.zeros(12*(nsideCourse**2))\n",
     "smoothingWeights[np.where(fullOrigGala > 0)[0]] = 1\n",
     "smoothingWeights = hp.pixelfunc.reorder(hp.sphtfunc.smoothing(hp.pixelfunc.reorder(smoothingWeights, n2r = True), sigma = smoothSigma), r2n = True)\n",
     "fullOrigGala = hp.pixelfunc.reorder(hp.sphtfunc.smoothing(hp.pixelfunc.reorder(fullOrigGala, n2r = True), sigma = smoothSigma), r2n = True)\n",
@@ -1732,7 +1725,7 @@
     "# fullOrigGala[fracPix[extraCrop]] = hp.UNSEEN\n",
     "\n",
     "\n",
-    "fullCorrGala = np.full(12*(512**2), hp.UNSEEN)\n",
+    "fullCorrGala = np.full(12*(nsideCourse**2), hp.UNSEEN)\n",
     "fullCorrGala[fracPix] = corrGala\n",
     "fullCorrGala[np.where(fullOrigGala <= 0)[0]] = hp.UNSEEN\n",
     "\n",
@@ -1804,7 +1797,7 @@
    },
    "outputs": [],
    "source": [
-    "# fullSkyProb = np.full(12*(512**2), hp.UNSEEN)\n",
+    "# fullSkyProb = np.full(12*(nsideCourse**2), hp.UNSEEN)\n",
     "# fullSkyProb[fracPix] = deStarDetAsStarProb[2]\n",
     "# hspProb = hsp.HealSparseMap(nside_coverage=nside_coverage, healpix_map=fullSkyProb)"
    ]
@@ -2170,7 +2163,7 @@
    },
    "outputs": [],
    "source": [
-    "# testRa, testDec = hp.pixelfunc.pix2ang(512, np.arange(12*(512**2)), nest=True, lonlat=True)\n",
+    "# testRa, testDec = hp.pixelfunc.pix2ang(nsideCourse, np.arange(12*(nsideCourse**2)), nest=True, lonlat=True)\n",
     "# testPix = np.where((testRa >= 26) & (testRa <= 29) & (testDec >= -50) & (testDec <= -45))[0]"
    ]
   },
